change how stoops are defined to enable crossval on training size

--- a/notebooks/1-Parent-sample.ipynb
+++ b/notebooks/1-Parent-sample.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## DR16:\n",
+    "\n",
     "Need to download all aspcapStar files for N/S (use --dry-run first):\n",
     "\n",
     "    rsync -aLvz --include \"*/\" \\\n",
@@ -21,7 +23,36 @@
     "    rsync -aLvz --include \"*/\" \\\n",
     "    --include \"asStarLSF*.fits\" --exclude \"*\" \\\n",
     "    --prune-empty-dirs --progress \\\n",
-    "    rsync://dtn.sdss.org/dr16/apogee/spectro/redux/r12/stars/lco25m/ lco25m/"
+    "    rsync://dtn.sdss.org/dr16/apogee/spectro/redux/r12/stars/lco25m/ lco25m/\n",
+    "    \n",
+    "    \n",
+    "## DR17:\n",
+    "\n",
+    "Need to download all aspcapStar files for N/S (use --dry-run first):\n",
+    "\n",
+    "    rsync -aLvz --include \"*/\" \\\n",
+    "    --include \"aspcapStar*.fits\" --exclude \"*\" \\\n",
+    "    --prune-empty-dirs --progress \\\n",
+    "    rsync://sdss@dtn01.sdss.utah.edu/sas/apogeework/apogee/spectro/aspcap/dr17/synspec/apo25m/ apo25m/\n",
+    "    \n",
+    "    rsync -aLvz --include \"*/\" \\\n",
+    "    --include \"aspcapStar*.fits\" --exclude \"*\" \\\n",
+    "    --prune-empty-dirs --progress \\\n",
+    "    rsync://sdss@dtn01.sdss.utah.edu/sas/apogeework/apogee/spectro/aspcap/dr17/synspec/lco25m/ lco25m/\n",
+    "    \n",
+    "And same for the apStarLSF files:\n",
+    "\n",
+    "    rsync -aLvz --include \"*/\" \\\n",
+    "    --include \"apStarLSF*.fits\" --exclude \"*\" \\\n",
+    "    --prune-empty-dirs --progress \\\n",
+    "    --dry-run \\\n",
+    "    rsync://sdss@dtn01.sdss.utah.edu/sas/apogeework/apogee/spectro/redux/dr17/stars/apo25m/ apo25m/\n",
+    "    \n",
+    "    rsync -aLvz --include \"*/\" \\\n",
+    "    --include \"asStarLSF*.fits\" --exclude \"*\" \\\n",
+    "    --prune-empty-dirs --progress \\\n",
+    "    --dry-run \\\n",
+    "    rsync://sdss@dtn01.sdss.utah.edu/sas/apogeework/apogee/spectro/redux/dr17/stars/lco25m/ lco25m/"
    ]
   },
   {
@@ -31,7 +62,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['APOGEE_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/apogee-test/\"\n",
+    "os.environ['APOGEE_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/apogee/\"\n",
     "\n",
     "import re\n",
     "import sys\n",
@@ -57,7 +88,10 @@
     "\n",
     "from joaquin.config import all_phot_names, dr\n",
     "from joaquin.plot import simple_corner, phot_to_label\n",
-    "from joaquin.data import JoaquinData"
+    "from joaquin.data import JoaquinData\n",
+    "from joaquin.logger import logger\n",
+    "\n",
+    "logger.setLevel(10)"
    ]
   },
   {
@@ -67,7 +101,8 @@
    "outputs": [],
    "source": [
     "cache_path = pathlib.Path(f'../cache/{dr}').resolve()\n",
-    "cache_path.mkdir(exist_ok=True, parents=True)"
+    "cache_path.mkdir(exist_ok=True, parents=True)\n",
+    "cache_path"
    ]
   },
   {
@@ -86,14 +121,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# allstar = at.Table.read('/mnt/home/apricewhelan/data/APOGEE_DR17/allStar-dr17-turbo20-beta.fits', \n",
-    "#                         hdu=1)\n",
-    "\n",
-    "allstar = at.Table.read('/mnt/home/apricewhelan/data/APOGEE_DR16/allStar-r12-gaiaedr3.fits',\n",
+    "allstar = at.Table.read('/mnt/home/apricewhelan/data/APOGEE_DR17/allStar-dr17-synspec.fits', \n",
     "                        hdu=1)\n",
-    "for colname in ['phot_g_mean_mag', 'phot_bp_mean_mag', 'phot_rp_mean_mag',\n",
-    "                'parallax', 'parallax_error']:\n",
-    "    allstar[f'GAIAEDR3_{colname.upper()}'] = allstar[colname]"
+    "\n",
+    "gaia_xm = at.Table.read('/mnt/home/apricewhelan/data/APOGEE_DR17/allStar-dr17-synspec-gaiaedr3-xm.fits',\n",
+    "                        hdu=1)\n",
+    "\n",
+    "allstar = at.join(allstar, gaia_xm, join_type='left')\n",
+    "allstar =at.unique(allstar, 'APOGEE_ID')\n",
+    "\n",
+    "\n",
+    "# allstar = at.Table.read('/mnt/home/apricewhelan/data/APOGEE_DR16/allStar-r12-gaiaedr3.fits',\n",
+    "#                         hdu=1)\n",
+    "# for colname in ['phot_g_mean_mag', 'phot_bp_mean_mag', 'phot_rp_mean_mag',\n",
+    "#                 'parallax', 'parallax_error']:\n",
+    "#     allstar[f'GAIAEDR3_{colname.upper()}'] = allstar[colname]"
    ]
   },
   {
@@ -102,8 +144,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wise = at.Table.read('/mnt/home/apricewhelan/data/APOGEE_DR17/APOGEE-DR17-wise-result.fits.gz')\n",
-    "wise.rename_column('apogee_id', 'APOGEE_ID')\n",
+    "wise = at.Table.read('/mnt/home/apricewhelan/data/APOGEE_DR17/APOGEE-DR17-wise-result.fits')\n",
+    "# wise.rename_column('apogee_id', 'APOGEE_ID')\n",
     "\n",
     "allstar['APOGEE_ID'] = allstar['APOGEE_ID'].astype(str)\n",
     "wise['APOGEE_ID'] = [x.strip() for x in wise['APOGEE_ID'].astype(str)]\n",
@@ -144,7 +186,7 @@
     "# phot_mask &= np.char.startswith(stars['ph_qual'].astype(str), 'AA')\n",
     "pattr = re.compile(\"^([AB][AB])\")\n",
     "phot_mask &= np.array([re.search(pattr, x) is not None\n",
-    "                       for x in stars['ph_qual'].filled('--').astype(str)])"
+    "                       for x in stars['ph_qual'].astype(str)])"
    ]
   },
   {
@@ -178,7 +220,8 @@
     "    3,  # VERY_BRIGHT_NEIGHBOR\n",
     "    4,  # LOW_SNR\n",
     "])\n",
-    "starflag_mask = (stars['STARFLAG'] & np.sum(2**bits)) == 0"
+    "starflag_mask = (stars['STARFLAG'] & np.sum(2**bits)) == 0\n",
+    "starflag_mask.sum()"
    ]
   },
   {
@@ -205,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G_J = clean_stars['GAIAEDR3_PHOT_G_MEAN_MAG'] - clean_stars['J']\n",
+    "G_J = clean_stars['phot_g_mean_mag'] - clean_stars['J']\n",
     "J_K = clean_stars['J'] - clean_stars['K']\n",
     "\n",
     "poly = np.poly1d(np.polyfit(G_J, J_K, deg=1))\n",
@@ -253,8 +296,8 @@
     "ax.set_ylabel(r'$(J-K) - (J-K)_{\\rm pred}$')\n",
     "\n",
     "# MAGIC NUMBERS\n",
-    "ax.axhline(np.median(dcolor) - 6 * np.std(dcolor))\n",
-    "ax.axhline(np.median(dcolor) + 6 * np.std(dcolor))\n",
+    "ax.axhline(np.median(dcolor) - 8 * np.std(dcolor))\n",
+    "ax.axhline(np.median(dcolor) + 8 * np.std(dcolor))\n",
     "# ax.axhline(np.median(dcolor) - 8 * 1.5 * MAD(dcolor), color='tab:green')\n",
     "# ax.axhline(np.median(dcolor) + 8 * 1.5 * MAD(dcolor), color='tab:green')\n",
     "\n",
@@ -268,8 +311,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MAGIC NUMBER: Good ol' standard 6 sigma cut\n",
-    "dcolor_mask = np.abs(dcolor - np.median(dcolor)) < 6 * np.std(dcolor)\n",
+    "# MAGIC NUMBER: Good ol' standard 8 sigma cut\n",
+    "dcolor_mask = np.abs(dcolor - np.median(dcolor)) < 8 * np.std(dcolor)\n",
     "dcolor_mask &= (clean_stars['H'] - clean_stars['w2mpro']) > -0.5\n",
     "dcolor_mask &= (clean_stars['w1mpro'] - clean_stars['w2mpro']) > -1\n",
     "dcolor_mask.sum()"
@@ -290,15 +333,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.plot(parent['RA'], parent['DEC'], \n",
+    "         marker='o', mew=0, ls='none', alpha=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Photometry / colors:\n",
     "plot_X = []\n",
     "labels = []\n",
     "\n",
     "colors = [\n",
-    "    ('GAIAEDR3_PHOT_BP_MEAN_MAG', 'GAIAEDR3_PHOT_RP_MEAN_MAG'),\n",
+    "    ('phot_bp_mean_mag', 'phot_rp_mean_mag'),\n",
     "    ('J', 'K'),\n",
     "    ('w1mpro', 'w2mpro'),\n",
-    "    ('GAIAEDR3_PHOT_G_MEAN_MAG', 'J'),\n",
+    "    ('phot_g_mean_mag', 'J'),\n",
     "    ('H', 'w2mpro')\n",
     "]\n",
     "for i, (p1, p2) in enumerate(colors):\n",
