--- a/notebooks/2-Neighborhoods-PCA.ipynb
+++ b/notebooks/2-Neighborhoods-PCA.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['APOGEE_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/apogee-test/\"\n",
+    "os.environ['APOGEE_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/apogee/\"\n",
     "os.environ['JOAQUIN_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/projects/joaquin/cache\"\n",
     "import warnings\n",
     "import pickle\n",
@@ -33,7 +33,7 @@
     "\n",
     "from joaquin.data import JoaquinData\n",
     "from joaquin.config import (all_phot_names, dr, root_cache_path, neighborhood_n_components,\n",
-    "                            neighborhood_size, testing_zone_size, neighborhood_color_names)\n",
+    "                            block_size, neighborhood_color_names, max_neighborhood_size)\n",
     "from joaquin.plot import simple_corner, phot_to_label, plot_hr_cmd"
    ]
   },
@@ -65,6 +65,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent_X = parent_data.mask_spec_pixels(global_spec_mask).get_neighborhood_X()\n",
+    "parent_X.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,21 +89,14 @@
    "source": [
     "rng = np.random.default_rng(42)\n",
     "\n",
-    "sub_stars = parent[(parent['SNR'] > 200)]\n",
-    "idx = rng.choice(len(sub_stars), size=8192, replace=False)\n",
-    "sub_stars = sub_stars[idx]\n",
+    "idx, = np.where(\n",
+    "    (parent['SNR'] > 200) & \n",
+    "    (parent['ruwe'] < 1.2)\n",
+    ")\n",
+    "idx = rng.choice(idx, size=8192, replace=False)\n",
+    "sub_data = parent_data[idx]\n",
     "\n",
-    "len(sub_stars)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sub_data = JoaquinData.from_stars(\n",
-    "    sub_stars, cache_file='neighborhood-node-sample')"
+    "len(sub_data)"
    ]
   },
   {
@@ -372,7 +375,11 @@
     "\n",
     "neighborhoods = []\n",
     "for (i1, i2) in idxs[sort_idx]:\n",
-    "    if i1 in np.ravel(neighborhoods):\n",
+    "    # if i1 in np.ravel(neighborhoods):\n",
+    "    #     continue\n",
+    "    # This relaxes the uniqueness requirement: we only skip now if a \n",
+    "    # star appears in multiple neighborhoods\n",
+    "    if (np.ravel(neighborhoods) == i1).sum() >= 8:\n",
     "        continue\n",
     "    \n",
     "    _, results = tree.query(node_projected_X[i1], k=this_size)\n",
@@ -410,6 +417,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This makes plots of all of the neighborhood stars:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -418,11 +432,14 @@
     "neighbor_plot_path = plot_path / 'neighborhoods'\n",
     "neighbor_plot_path.mkdir(exist_ok=True)\n",
     "\n",
+    "for name in tqdm(neighbor_plot_path.rglob('*.png')):\n",
+    "    name.unlink()\n",
+    "\n",
     "for n, hood in enumerate(tqdm(neighborhoods)):\n",
     "    fig = plot_hr_cmd(parent, neighborhood_node_stars,\n",
     "                      idx0=hood[0], other_idx=hood[1:])\n",
     "    fig.tight_layout()\n",
-    "    fig.savefig(neighbor_plot_path / f'neighborhood-{n:03d}.png', dpi=200)\n",
+    "    fig.savefig(neighbor_plot_path / f'neighborhood-{max_neighborhood_size}-{n:03d}.png', dpi=200)\n",
     "    plt.close(fig)"
    ]
   },
@@ -439,20 +456,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent_X = parent_data.mask_spec_pixels(global_spec_mask).get_neighborhood_X()\n",
-    "parent_X.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "parent_projected_X = np.zeros((parent_X.shape[0], node_projected_X.shape[1]),\n",
     "                               dtype=np.float32)\n",
     "\n",
-    "vals = np.linspace(0, parent_X.shape[0], 8).astype(int)\n",
+    "vals = np.linspace(0, parent_X.shape[0], 32).astype(int)\n",
     "for i1, i2 in zip(vals[:-1], vals[1:]):\n",
     "    if i2 >= parent_X.shape[0]-1:\n",
     "        i2 = parent_X.shape[0]\n",
@@ -479,7 +486,7 @@
     "zone_idx = []\n",
     "for i, nidx in enumerate(tqdm(neighborhoods)):\n",
     "    dist, idx = parent_tree.query(node_projected_X[nidx[0]],\n",
-    "                                  k=neighborhood_size)\n",
+    "                                  k=max_neighborhood_size)\n",
     "    zone_idx.append(idx[dist.argsort()])"
    ]
   },
@@ -489,20 +496,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for n in trange(len(zone_idx)):\n",
-    "    fig = plot_hr_cmd(parent_data.stars, parent_data.stars,\n",
-    "                      idx0=zone_idx[n][0], other_idx=zone_idx[n][1:])\n",
+    "# for n in trange(len(zone_idx)):\n",
+    "#     fig = plot_hr_cmd(parent_data.stars, parent_data.stars,\n",
+    "#                       idx0=zone_idx[n][0], other_idx=zone_idx[n][1:])\n",
     "    \n",
-    "    fig.tight_layout()\n",
-    "    fig.savefig(neighbor_plot_path / f'parent-neighborhood-{n:03d}.png', dpi=200)\n",
-    "    plt.close(fig)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What fraction of the parent sample stars end up in a zone 1 vs zone 2?"
+    "#     fig.tight_layout()\n",
+    "#     fig.savefig(neighbor_plot_path / f'parent-neighborhood-{neighborhood_size}-{n:03d}.png', dpi=200)\n",
+    "#     plt.close(fig)"
    ]
   },
   {
@@ -511,26 +511,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_indices = []\n",
-    "for n in range(len(zone_idx)):\n",
-    "    all_indices.append(zone_idx[n][:testing_zone_size])\n",
-    "tmp = np.unique(np.ravel(all_indices)).shape[0] / parent_projected_X.shape[0]\n",
-    "\n",
-    "print(f\"{tmp*100:.1f}% of stars end up in a zone 1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_indices = []\n",
-    "for n in range(len(zone_idx)):\n",
-    "    all_indices.append(zone_idx[n])\n",
-    "tmp = np.unique(np.ravel(all_indices)).shape[0] / parent_projected_X.shape[0]\n",
-    "\n",
-    "print(f\"{tmp*100:.1f}% of stars end up in a zone 2\")"
+    "for size in 2**np.arange(13, 15+1):\n",
+    "    all_indices = []\n",
+    "    for n in range(len(zone_idx)):\n",
+    "        all_indices.append(zone_idx[n][:size])\n",
+    "    tmp = np.unique(np.ravel(all_indices)).shape[0] / parent_projected_X.shape[0]\n",
+    "    print(f\"{tmp*100:.1f}% of stars end up in a neighborhood of size {size}\")"
    ]
   },
   {
@@ -548,7 +534,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = cache_path / 'good_parent_neighborhood_indices.npy'\n",
+    "filename = cache_path / f'good_parent_neighborhood_indices-{neighborhood_size}.npy'\n",
     "np.save(filename, np.array(all_indices))"
    ]
   },
