--- a/notebooks/2-Neighborhoods-PCA.ipynb
+++ b/notebooks/2-Neighborhoods-PCA.ipynb
@@ -91,7 +91,8 @@
     "\n",
     "idx, = np.where(\n",
     "    (parent['SNR'] > 200) & \n",
-    "    (parent['ruwe'] < 1.2)\n",
+    "    (parent['ruwe'] < 1.2) &\n",
+    "    (parent['N_COMPONENTS'] == 1)\n",
     ")\n",
     "idx = rng.choice(idx, size=8192, replace=False)\n",
     "sub_data = parent_data[idx]\n",
@@ -371,12 +372,13 @@
    "source": [
     "sort_idx = dens.argsort()[::-1]\n",
     "\n",
-    "this_size = int(neighborhood_size * len(neighborhood_node_stars) / len(parent))\n",
+    "this_size = int(max_neighborhood_size * len(neighborhood_node_stars) / len(parent))\n",
     "\n",
     "neighborhoods = []\n",
     "for (i1, i2) in idxs[sort_idx]:\n",
     "    # if i1 in np.ravel(neighborhoods):\n",
     "    #     continue\n",
+    "    \n",
     "    # This relaxes the uniqueness requirement: we only skip now if a \n",
     "    # star appears in multiple neighborhoods\n",
     "    if (np.ravel(neighborhoods) == i1).sum() >= 8:\n",
@@ -465,7 +467,13 @@
     "        i2 = parent_X.shape[0]\n",
     "        \n",
     "    parent_projected_X[i1:i2] = pca.transform(parent_X[i1:i2])\n",
-    "    parent_projected_X[i1:i2] /= pca.singular_values_"
+    "    parent_projected_X[i1:i2] /= pca.singular_values_\n",
+    "      \n",
+    "# Remove sources that we don't want to appear in the train/test neighborhoods:\n",
+    "parent_projected_X[\n",
+    "    (parent['N_COMPONENTS'] != 1) |\n",
+    "    (parent['ruwe'] > 1.4) |  # MAGIC NUMBER\n",
+    "    (parent['SNR'] < 80)] = np.inf"
    ]
   },
   {
@@ -534,7 +542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = cache_path / f'good_parent_neighborhood_indices-{neighborhood_size}.npy'\n",
+    "filename = cache_path / f'good_parent_neighborhood_indices-{max_neighborhood_size}.npy'\n",
     "np.save(filename, np.array(all_indices))"
    ]
   },
