make parent sample

--- a/notebooks/1-Parent-sample.ipynb
+++ b/notebooks/1-Parent-sample.ipynb
@@ -4,28 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DR16:\n",
-    "\n",
-    "Need to download all aspcapStar files for N/S (use --dry-run first):\n",
-    "\n",
-    "    rsync -aLvz --include \"*/\" \\\n",
-    "    --include \"aspcapStar*.fits\" --exclude \"*\" \\\n",
-    "    --prune-empty-dirs --progress \\\n",
-    "    rsync://dtn.sdss.org/dr16/apogee/spectro/aspcap/r12/l33/apo25m/ apo25m/\n",
-    "    \n",
-    "And same for the apStarLSF files:\n",
-    "\n",
-    "    rsync -aLvz --include \"*/\" \\\n",
-    "    --include \"apStarLSF*.fits\" --exclude \"*\" \\\n",
-    "    --prune-empty-dirs --progress \\\n",
-    "    rsync://dtn.sdss.org/dr16/apogee/spectro/redux/r12/stars/apo25m/ apo25m/\n",
-    "    \n",
-    "    rsync -aLvz --include \"*/\" \\\n",
-    "    --include \"asStarLSF*.fits\" --exclude \"*\" \\\n",
-    "    --prune-empty-dirs --progress \\\n",
-    "    rsync://dtn.sdss.org/dr16/apogee/spectro/redux/r12/stars/lco25m/ lco25m/\n",
-    "    \n",
-    "    \n",
     "## DR17:\n",
     "\n",
     "Need to download all aspcapStar files for N/S (use --dry-run first):\n",
@@ -61,37 +39,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ['APOGEE_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/apogee/\"\n",
-    "\n",
-    "import re\n",
-    "import sys\n",
     "import pathlib\n",
-    "_path = str(pathlib.Path('../').resolve())\n",
-    "if _path not in sys.path:\n",
-    "    sys.path.append(_path)\n",
+    "import re\n",
     "\n",
-    "import corner\n",
     "from astropy.io import fits\n",
     "import astropy.coordinates as coord\n",
+    "from astropy.stats import median_absolute_deviation as MAD\n",
     "import astropy.table as at\n",
     "import astropy.units as u\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
-    "from tqdm.auto import tqdm\n",
     "from scipy.stats import binned_statistic\n",
-    "from astropy.stats import median_absolute_deviation as MAD\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
-    "from gala.mpl_style import hesperia, laguna\n",
-    "\n",
-    "from joaquin.config import all_phot_names, dr\n",
-    "from joaquin.plot import simple_corner, phot_to_label\n",
-    "from joaquin.data import JoaquinData\n",
-    "from joaquin.logger import logger\n",
-    "\n",
-    "logger.setLevel(10)"
+    "from joaquin.config import Config\n",
+    "from joaquin.plot import phot_to_label, simple_corner\n",
+    "from joaquin.apogee_data import make_apogee_X\n",
+    "from joaquin.data import JoaquinData"
    ]
   },
   {
@@ -100,19 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cache_path = pathlib.Path(f'../cache/{dr}').resolve()\n",
-    "cache_path.mkdir(exist_ok=True, parents=True)\n",
-    "cache_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# binaries = at.Table.read(\n",
-    "#     '/mnt/home/apricewhelan/projects/apogee-dr16-vac/catalogs/lnK-0.2_logL3.0_metadata.fits')"
+    "conf = Config('../config.yml')"
    ]
   },
   {
@@ -128,14 +82,7 @@
     "                        hdu=1)\n",
     "\n",
     "allstar = at.join(allstar, gaia_xm, join_type='left')\n",
-    "allstar =at.unique(allstar, 'APOGEE_ID')\n",
-    "\n",
-    "\n",
-    "# allstar = at.Table.read('/mnt/home/apricewhelan/data/APOGEE_DR16/allStar-r12-gaiaedr3.fits',\n",
-    "#                         hdu=1)\n",
-    "# for colname in ['phot_g_mean_mag', 'phot_bp_mean_mag', 'phot_rp_mean_mag',\n",
-    "#                 'parallax', 'parallax_error']:\n",
-    "#     allstar[f'GAIAEDR3_{colname.upper()}'] = allstar[colname]"
+    "allstar = at.unique(allstar, 'APSTAR_ID')"
    ]
   },
   {
@@ -145,13 +92,12 @@
    "outputs": [],
    "source": [
     "wise = at.Table.read('/mnt/home/apricewhelan/data/APOGEE_DR17/APOGEE-DR17-wise-result.fits')\n",
-    "# wise.rename_column('apogee_id', 'APOGEE_ID')\n",
     "\n",
     "allstar['APOGEE_ID'] = allstar['APOGEE_ID'].astype(str)\n",
     "wise['APOGEE_ID'] = [x.strip() for x in wise['APOGEE_ID'].astype(str)]\n",
     "\n",
     "allstar = at.join(allstar, wise, keys='APOGEE_ID', join_type='left')\n",
-    "allstar = at.unique(allstar, keys='APOGEE_ID')"
+    "allstar = at.unique(allstar, keys='APSTAR_ID')"
    ]
   },
   {
@@ -166,27 +112,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Filter out bad photometry\n",
+    "\n",
+    "This is currently very aggressive (mag errors < 0.1, flux S/N > 10)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf.phot_names"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "phot_mask = np.ones(len(stars), dtype=bool)\n",
-    "for name in all_phot_names:\n",
+    "for name in conf.phot_names:\n",
     "    phot_mask &= (np.isfinite(stars[name]) & \n",
     "                  (stars[name] > 0) &\n",
     "                  (stars[name] < 22))  # MAGIC NUMBER\n",
     "\n",
+    "# Gaia photometry\n",
+    "for band in ['g', 'bp', 'rp']:\n",
+    "    mag_err = 1 / stars[f'phot_{band}_mean_flux_over_error']\n",
+    "    phot_mask &= (mag_err < 0.1)  # MAGIC NUMBER\n",
+    "    \n",
     "# 2MASS photometry\n",
     "for band in ['J', 'H', 'K']:\n",
     "    phot_mask &= ((stars[f'{band}_ERR'] > 0) &\n",
     "                  (stars[f'{band}_ERR'] < 0.1))  # MAGIC NUMBER\n",
     "\n",
     "# WISE photometry\n",
+    "phot_mask &= stars['w1mpro_error'] < 0.1\n",
+    "\n",
     "# phot_mask &= np.char.startswith(stars['ph_qual'].astype(str), 'AA')\n",
     "pattr = re.compile(\"^([AB][AB])\")\n",
     "phot_mask &= np.array([re.search(pattr, x) is not None\n",
-    "                       for x in stars['ph_qual'].astype(str)])"
+    "                       for x in stars['ph_qual'].astype(str)])\n",
+    "\n",
+    "phot_mask.sum(), len(phot_mask)"
    ]
   },
   {
@@ -195,17 +168,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for band in ['g', 'bp', 'rp']:\n",
+    "    mag_err = 1 / stars[f'phot_{band}_mean_flux_over_error']\n",
+    "    print(band, np.percentile(mag_err[phot_mask], [1, 99.9]))\n",
+    "    \n",
     "for band in 'JHK':\n",
-    "    print(np.percentile(stars[f'{band}_ERR'][phot_mask], [1, 99.9]))"
+    "    print(band, np.percentile(stars[f'{band}_ERR'][phot_mask], [1, 99.9]))\n",
+    "    \n",
+    "for band in ['w1mpro', 'w2mpro']:\n",
+    "    print(band, np.percentile(stars[f'{band}_error'][phot_mask], [1, 99.9]))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# binaries_mask = ~np.isin(stars['APOGEE_ID'], binaries['APOGEE_ID'])"
+    "### TODO: filter out SB1 binaries from The Joker VAC?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Filter on starflag bitmasks for bad spectra:"
    ]
   },
   {
@@ -230,9 +215,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: mask binaries?\n",
-    "clean_stars = stars[phot_mask & starflag_mask]  # & binaries_mask\n",
-    "len(stars), len(clean_stars)"
+    "ncomponents_mask = stars['N_COMPONENTS'] == 1\n",
+    "ncomponents_mask.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Full set of cleaned stars:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_stars = stars[phot_mask & starflag_mask & ncomponents_mask]  # & binaries_mask\n",
+    "len(stars), len(clean_stars), len(np.unique(clean_stars['APOGEE_ID']))"
    ]
   },
   {
@@ -333,8 +334,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(10, 6))\n",
     "plt.plot(parent['RA'], parent['DEC'], \n",
-    "         marker='o', mew=0, ls='none', alpha=0.5)"
+    "         marker='o', mew=0, ls='none', alpha=0.1, ms=1)\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -347,13 +350,14 @@
     "plot_X = []\n",
     "labels = []\n",
     "\n",
-    "colors = [\n",
-    "    ('phot_bp_mean_mag', 'phot_rp_mean_mag'),\n",
-    "    ('J', 'K'),\n",
-    "    ('w1mpro', 'w2mpro'),\n",
-    "    ('phot_g_mean_mag', 'J'),\n",
-    "    ('H', 'w2mpro')\n",
-    "]\n",
+    "colors = conf.neighborhood_color_names\n",
+    "# [\n",
+    "#     ('phot_bp_mean_mag', 'phot_rp_mean_mag'),\n",
+    "#     ('J', 'K'),\n",
+    "#     ('w1mpro', 'w2mpro'),\n",
+    "#     ('phot_g_mean_mag', 'J'),\n",
+    "#     ('H', 'w2mpro')\n",
+    "# ]\n",
     "for i, (p1, p2) in enumerate(colors):\n",
     "    vals = parent[p1] - parent[p2]\n",
     "    plot_X.append(vals)\n",
@@ -393,42 +397,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, *_, cb = simple_corner(\n",
-    "    plot_X, \n",
-    "    labels=labels,\n",
-    "    alpha=0.2, \n",
-    "    color_by=parent['LOGG'],\n",
-    "    vmin=0.5, vmax=5., cmap='turbo',\n",
-    "    colorbar=True)\n",
-    "fig.set_facecolor('w')\n",
-    "cb.set_label(r'$\\log g$')\n",
-    "cb.ax.set_aspect(40)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, *_, cb = simple_corner(\n",
-    "    plot_X, \n",
-    "    labels=labels,\n",
-    "    alpha=0.2, \n",
-    "    color_by=np.log10(parent['SFD_EBV']),\n",
-    "    vmin=-1, vmax=0, cmap='turbo',\n",
-    "    colorbar=True)\n",
-    "fig.set_facecolor('w')\n",
-    "cb.set_label(r'$\\log_{10} ({\\rm SFD EBV})$')\n",
-    "cb.ax.set_aspect(40)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "len(allstar), len(clean_stars), len(parent)"
    ]
   },
@@ -438,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent.write(cache_path / 'parent-sample.fits', overwrite=True)"
+    "parent.write(conf.parent_sample_source_file, overwrite=True)"
    ]
   },
   {
@@ -455,26 +423,8 @@
    "outputs": [],
    "source": [
     "parent_data = JoaquinData.from_stars(\n",
-    "    parent, cache_file='parent-sample')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Define and save a global spectral mask based on the fraction of pixels over the full parent sample that are masked:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "global_spec_mask = (parent_data.spec_bad_masks.sum(axis=0) / len(parent_data.spec_bad_masks)) > 0.25\n",
-    "np.save(cache_path / 'global_spec_bad_mask.npy', \n",
-    "        global_spec_mask)\n",
-    "global_spec_mask.sum(), len(global_spec_mask)"
+    "    conf, parent, make_apogee_X, \n",
+    "    cache_file=conf.parent_sample_cache_file)"
    ]
   },
   {
