--- a/notebooks/2-Neighborhoods-PCA.ipynb
+++ b/notebooks/2-Neighborhoods-PCA.ipynb
@@ -6,17 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ['APOGEE_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/apogee/\"\n",
-    "os.environ['JOAQUIN_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/projects/joaquin/cache\"\n",
-    "import warnings\n",
-    "import pickle\n",
-    "\n",
-    "import sys\n",
     "import pathlib\n",
-    "_path = str(pathlib.Path('../').resolve())\n",
-    "if _path not in sys.path:\n",
-    "    sys.path.append(_path)\n",
     "\n",
     "import astropy.coordinates as coord\n",
     "import astropy.table as at\n",
@@ -31,9 +21,8 @@
     "from sklearn.decomposition import IncrementalPCA\n",
     "from sklearn.neighbors import KernelDensity\n",
     "\n",
+    "from joaquin.config import Config\n",
     "from joaquin.data import JoaquinData\n",
-    "from joaquin.config import (all_phot_names, dr, root_cache_path, neighborhood_n_components,\n",
-    "                            block_size, neighborhood_color_names, max_neighborhood_size)\n",
     "from joaquin.plot import simple_corner, phot_to_label, plot_hr_cmd"
    ]
   },
@@ -43,12 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cache_path = pathlib.Path(f'../cache/{dr}').resolve()\n",
-    "cache_path.mkdir(exist_ok=True, parents=True)\n",
+    "conf = Config('../config.yml')\n",
     "\n",
-    "plot_path = pathlib.Path('../plot') / dr\n",
-    "plot_path = plot_path.resolve()\n",
-    "plot_path.mkdir(parents=True, exist_ok=True)"
+    "plot_path = conf.plot_path / 'neighborhoods'\n",
+    "plot_path.mkdir(exist_ok=True)"
    ]
   },
   {
@@ -57,11 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent_data = JoaquinData.read('parent-sample')\n",
-    "parent_data = parent_data[np.all(np.isfinite(parent_data.X), axis=1)]\n",
-    "\n",
-    "parent = parent_data.stars\n",
-    "global_spec_mask = np.load(cache_path / 'global_spec_bad_mask.npy')"
+    "# Random number generator, using seed from config file\n",
+    "rng = np.random.default_rng(seed=conf.seed)"
    ]
   },
   {
@@ -70,8 +54,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent_X = parent_data.mask_spec_pixels(global_spec_mask).get_neighborhood_X()\n",
-    "parent_X.shape"
+    "parent = JoaquinData.read(conf.parent_sample_cache_file)\n",
+    "parent = parent[np.all(np.isfinite(parent.X), axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a global spectral mask based on the fraction of pixels over the full parent sample that are masked:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MAGIC NUMBER / TODO: 0.25 should probably be a config setting\n",
+    "global_spec_mask = (parent.spec_bad_masks.sum(axis=0) / len(parent)) > 0.25"
    ]
   },
   {
@@ -87,17 +88,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng = np.random.default_rng(42)\n",
+    "# TODO: these numbers or the filter used here should be configurable\n",
+    "idx = np.argwhere(\n",
+    "    (parent.stars['SNR'] > 200) &   # Strict spectral S/N cut\n",
+    "    (parent.stars['ruwe'] < 1.2) &  # Strict RUWE cut\n",
+    "    (parent.stars['N_COMPONENTS'] == 1)  # No SB2's\n",
+    ").ravel()\n",
     "\n",
-    "idx, = np.where(\n",
-    "    (parent['SNR'] > 200) & \n",
-    "    (parent['ruwe'] < 1.2) &\n",
-    "    (parent['N_COMPONENTS'] == 1)\n",
-    ")\n",
-    "idx = rng.choice(idx, size=8192, replace=False)\n",
-    "sub_data = parent_data[idx]\n",
+    "# TODO: this number (size) should be configurable\n",
+    "idx = rng.choice(idx, size=16384, replace=False)\n",
+    "subset = parent[idx]\n",
     "\n",
-    "len(sub_data)"
+    "len(subset)"
    ]
   },
   {
@@ -106,31 +108,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Spectroscopic HR diagram of the subset stars:\n",
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
     "\n",
     "teff_logg_bins = (\n",
     "    np.linspace(3000, 9000, 128),\n",
     "    np.linspace(-0.5, 5.75, 128))\n",
-    "ax.hist2d(parent['TEFF'], \n",
-    "          parent['LOGG'],\n",
-    "          bins=teff_logg_bins, \n",
+    "ax.hist2d(parent.stars['TEFF'],\n",
+    "          parent.stars['LOGG'],\n",
+    "          bins=teff_logg_bins,\n",
     "          norm=mpl.colors.LogNorm(),\n",
     "          cmap='Greys')\n",
     "\n",
-    "ax.plot(sub_data.stars['TEFF'],\n",
-    "        sub_data.stars['LOGG'],\n",
-    "        ls='none', marker='o', mew=0, ms=2., \n",
+    "ax.plot(subset.stars['TEFF'],\n",
+    "        subset.stars['LOGG'],\n",
+    "        ls='none', marker='o', mew=0, ms=2.,\n",
     "        color='tab:blue', alpha=0.75)\n",
     "\n",
-    "ax.set_xlim(teff_logg_bins[0].max(), \n",
+    "ax.set_xlim(teff_logg_bins[0].max(),\n",
     "            teff_logg_bins[0].min())\n",
-    "ax.set_ylim(teff_logg_bins[1].max(), \n",
+    "ax.set_ylim(teff_logg_bins[1].max(),\n",
     "            teff_logg_bins[1].min())\n",
     "\n",
     "ax.set_xlabel('TEFF')\n",
     "ax.set_ylabel('LOGG')\n",
     "\n",
-    "fig.tight_layout()"
+    "fig.tight_layout()\n",
+    "fig.savefig(plot_path / 'subset-logg-teff.png', dpi=200)"
    ]
   },
   {
@@ -148,18 +152,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub_data.all_phot_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "color_labels = [f'{phot_to_label[x1]}-{phot_to_label[x2]}'\n",
-    "                for x1, x2 in neighborhood_color_names]\n",
-    "sub_X = sub_data.mask_spec_pixels(global_spec_mask).get_neighborhood_X()"
+    "                for x1, x2 in conf.neighborhood_color_names]\n",
+    "tmp = subset.mask_spec_pixels(global_spec_mask)\n",
+    "subset_X = tmp.get_neighborhood_X(conf.neighborhood_color_names)"
    ]
   },
   {
@@ -168,19 +164,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp = sub_X[:, -len(color_labels):]\n",
-    "fig = simple_corner(\n",
+    "tmp = subset_X[:, -len(color_labels):]\n",
+    "fig, _, cb = simple_corner(\n",
     "    tmp, \n",
     "    labels=color_labels, \n",
-    "    color_by=sub_data.stars['LOGG'], vmin=0.5, vmax=5.5, \n",
-    "    colorbar=True)"
+    "    color_by=subset.stars['LOGG'], vmin=0.5, vmax=5.5, \n",
+    "    colorbar=True)\n",
+    "cb.ax.set_aspect(40)\n",
+    "fig.savefig(plot_path / 'neighborhood-colors.png', dpi=200)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run PCA on the neighborhood node features and project down:"
+    "Run PCA on the neighborhood node features and project the subset feature matrix onto the PCA basis:"
    ]
   },
   {
@@ -189,9 +187,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pca = IncrementalPCA(n_components=neighborhood_n_components, \n",
-    "                     batch_size=1024)\n",
-    "projected_X = pca.fit_transform(sub_X)\n",
+    "pca = IncrementalPCA(n_components=conf.neighborhood_pca_components,\n",
+    "                     batch_size=1024)  # HACK\n",
+    "projected_X = pca.fit_transform(subset_X)\n",
     "projected_X /= pca.singular_values_"
    ]
   },
@@ -199,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This hacky step removes egregious outliers - only run this after the cells above because it overwrites variables!!"
+    "This hacky step removes extreme outliers - only run this after the cells above because it overwrites variables!!"
    ]
   },
   {
@@ -212,10 +210,10 @@
     "std = np.std(projected_X, axis=0)\n",
     "bad_mask = np.any(np.abs(projected_X - mean) > 5*std, axis=1)\n",
     "\n",
-    "neighborhood_node_X = sub_X[~bad_mask]\n",
-    "neighborhood_node_stars = sub_data.stars[~bad_mask]\n",
+    "neighborhood_node_X = subset_X[~bad_mask]\n",
+    "neighborhood_node_stars = subset.stars[~bad_mask]\n",
     "\n",
-    "pca = IncrementalPCA(n_components=neighborhood_n_components, \n",
+    "pca = IncrementalPCA(n_components=conf.neighborhood_pca_components,\n",
     "                     batch_size=1024)\n",
     "node_projected_X = pca.fit_transform(neighborhood_node_X)\n",
     "node_projected_X /= pca.singular_values_"
@@ -246,6 +244,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot the spectroscopic parameters, colored by PCA component"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -272,7 +277,8 @@
     "ax.set_ylim(teff_logg_bins[1].max(), \n",
     "            teff_logg_bins[1].min())\n",
     "\n",
-    "fig.tight_layout()"
+    "fig.tight_layout()\n",
+    "fig.savefig(plot_path / 'neighborhood-logg-teff-pca.png', dpi=200)"
    ]
   },
   {
@@ -297,27 +303,17 @@
     "    cb.ax.set_aspect(40)\n",
     "    axes.flat[0].set_title(f'color: {name}')\n",
     "    \n",
-    "    fig.savefig(plot_path / f'neighborhood-pca-nodes-{name}.png', dpi=200)\n",
+    "    fig.savefig(plot_path / f'neighborhood-pca-{name}.png', dpi=200)\n",
     "    plt.close(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(root_cache_path / 'pca_neighborizer.pkl', 'wb') as f:\n",
-    "    pickle.dump(pca, f)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now use the neighborhood sample to define the neighborhoods:\n",
+    "### Now use the neighborhood sample to define the neighborhoods:\n",
     "\n",
-    "First, determine local density at all points:"
+    "We do this by estimating the local density (in projected feature space)"
    ]
   },
   {
@@ -365,6 +361,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: change this so that we skip a star if it appears in a block!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -372,20 +375,19 @@
    "source": [
     "sort_idx = dens.argsort()[::-1]\n",
     "\n",
-    "this_size = int(max_neighborhood_size * len(neighborhood_node_stars) / len(parent))\n",
+    "this_size = int(conf.max_neighborhood_size * len(neighborhood_node_stars) / len(parent))\n",
     "\n",
     "neighborhoods = []\n",
+    "blocks = []\n",
     "for (i1, i2) in idxs[sort_idx]:\n",
-    "    # if i1 in np.ravel(neighborhoods):\n",
-    "    #     continue\n",
-    "    \n",
     "    # This relaxes the uniqueness requirement: we only skip now if a \n",
-    "    # star appears in multiple neighborhoods\n",
-    "    if (np.ravel(neighborhoods) == i1).sum() >= 8:\n",
+    "    # star appears in a block\n",
+    "    if (np.ravel(blocks) == i1).sum() >= 2:\n",
     "        continue\n",
     "    \n",
     "    _, results = tree.query(node_projected_X[i1], k=this_size)\n",
     "    neighborhoods.append(np.concatenate(([i1], results)))\n",
+    "    blocks.append(np.concatenate(([i1], results[:conf.block_size])))\n",
     "\n",
     "len(neighborhoods)"
    ]
@@ -438,10 +440,10 @@
     "    name.unlink()\n",
     "\n",
     "for n, hood in enumerate(tqdm(neighborhoods)):\n",
-    "    fig = plot_hr_cmd(parent, neighborhood_node_stars,\n",
+    "    fig = plot_hr_cmd(parent.stars, neighborhood_node_stars,\n",
     "                      idx0=hood[0], other_idx=hood[1:])\n",
     "    fig.tight_layout()\n",
-    "    fig.savefig(neighbor_plot_path / f'neighborhood-{max_neighborhood_size}-{n:03d}.png', dpi=200)\n",
+    "    fig.savefig(neighbor_plot_path / f'neighborhood-{conf.max_neighborhood_size}-{n:03d}.png', dpi=200)\n",
     "    plt.close(fig)"
    ]
   },
@@ -450,6 +452,16 @@
    "metadata": {},
    "source": [
     "### Apply to the full parent sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = parent.mask_spec_pixels(global_spec_mask)\n",
+    "parent_X = tmp.get_neighborhood_X(conf.neighborhood_color_names)"
    ]
   },
   {
@@ -468,12 +480,13 @@
     "        \n",
     "    parent_projected_X[i1:i2] = pca.transform(parent_X[i1:i2])\n",
     "    parent_projected_X[i1:i2] /= pca.singular_values_\n",
-    "      \n",
+    "\n",
     "# Remove sources that we don't want to appear in the train/test neighborhoods:\n",
+    "# TODO: this should probably *also* be a configurable thing...\n",
     "parent_projected_X[\n",
-    "    (parent['N_COMPONENTS'] != 1) |\n",
-    "    (parent['ruwe'] > 1.4) |  # MAGIC NUMBER\n",
-    "    (parent['SNR'] < 80)] = np.inf"
+    "    (parent.stars['N_COMPONENTS'] != 1) |\n",
+    "    (parent.stars['ruwe'] > 1.4) |  # MAGIC NUMBER\n",
+    "    (parent.stars['SNR'] < 80)] = np.inf"
    ]
   },
   {
@@ -494,7 +507,7 @@
     "zone_idx = []\n",
     "for i, nidx in enumerate(tqdm(neighborhoods)):\n",
     "    dist, idx = parent_tree.query(node_projected_X[nidx[0]],\n",
-    "                                  k=max_neighborhood_size)\n",
+    "                                  k=conf.max_neighborhood_size)\n",
     "    zone_idx.append(idx[dist.argsort()])"
    ]
   },
@@ -542,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = cache_path / f'good_parent_neighborhood_indices-{max_neighborhood_size}.npy'\n",
+    "filename = conf.output_path / f'good_parent_neighborhood_indices.npy'\n",
     "np.save(filename, np.array(all_indices))"
    ]
   },
