--- a/paper/joaquin-dr17.tex
+++ b/paper/joaquin-dr17.tex
@@ -40,7 +40,7 @@
 \begin{document}
 
 \title{\joaquin{}: Data-driven spectrophotometric distances for stars and
-  percent-level standard candles on the red-giant branch.}
+  percent-level standard candles on the red-giant branch}
 
 \author{Adrian M. Price-Whelan}
 \affil{Flatiron Institute, a division of the Simons Foundation}
@@ -89,6 +89,8 @@ than RR Lyrae.
 
 \keywords{foo --- bar}
 
+\section*{~}
+\clearpage
 \section{Introduction}\label{sec:intro}
 
 Enormous spectroscopic projects such as \SDSSV{} (CITE)
@@ -260,6 +262,6 @@ It is a pleasure to thank Soledad Villar (JHU) for valuable input.
 \end{acknowledgements}
 
 \bibliographystyle{aasjournal}
-\bibliography{joaquin}{foo}
+\bibliography{j}
 
 \end{document}
